--- a/styles.css
+++ b/styles.css
@@ -12,15 +12,15 @@ body {
 {
 position:absolute;
 background-color:#ffffff;
-height:932px;
-width:430px;
+height:100%;
+width:100%;
 padding:0px;
 }
 .rectangle1
 {
 background-color:#eeda83;
-height:932px;
-width:430px;
+height:100%;
+width:100%;
 position:absolute;
 top:0px;
 left:0px;
