--- a/logins.css
+++ b/logins.css
@@ -1,8 +1,9 @@
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Century Gothic;
+    font-family: "Century", sans-serif;
 }
 
 body{
@@ -11,10 +12,12 @@ body{
     align-items: center;
     min-height: 100vh;
     background: #009688;
+background-color:#dcb342;
+
 
 }
 .login{
-    width: 420px;
+    width: 500px;
     background: lightblue;
     color: #fff;
 } 
@@ -28,6 +31,90 @@ body{
 .login .input-box{
     width: 100%;
     height: 50px;
-    background: salmon;
-    margin: 30px;
+    background: lightgreen;
+    margin: 30px 0;
+
 }
+
+.input-box input{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    font-size: 18px;
+    padding-left: 15px;
+    color: #fff;
+    outline: none;
+    border: 2px solid rgba(red, green, blue, .2);
+    border-radius: 40px;
+}
+
+.input-box input::placeholder{
+    color: #fff;
+}
+
+.input-box i{
+    position:absolute;
+    right: 20px;
+    top: 50%;
+    transform: tranalateY(-50%);
+    font-size: 20px;
+
+}
+
+.login .remember-forgot{
+    display: flex;
+    justify-content: space-between;
+    font-size: 14.5px;
+    margin: -15px 0 15px;
+
+}
+
+.remember-forgot label input{
+    accent-color: #fff;
+    margin-right: 3px;
+
+}
+
+.remember-forgot a{
+    color: #fff;
+    text-decoration: none;
+
+}
+
+.remember-forgot a:hover{
+    text-decoration: underline;
+
+}
+.login .login-button{
+    width: 100%;
+    height: 50px;  
+    border: none;
+    background: #fff;
+    outline: none;
+    border-radius: 45px;
+    box-shadow: 0 0 10px rgba(red, green, blue, .2);
+    cursor: pointer;
+    font-size: 16px;
+    color: #333;
+}
+
+.login .register-link{
+    font-size: 14px;
+    text-align: center;
+    margin: 20px;
+
+}
+
+.register-link p a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.register-link p a:hover{
+    text-decoration: underline;
+}
+
+
+
