--- a/recive.css
+++ b/recive.css
@@ -50,13 +50,14 @@ top:833px;
 left:117px;
 position:absolute;
 }
-.back
+.inapoi
 {
 color:#000000;
 text-align:center;
 vertical-align:text-middle;
 font-size:32px;
 font-family:Inter;
+background: transparent;
 left:150.68px;
 top:845.48px;
 width:122.9473648071289px;
